--- a/My Greek Resturnat/resturantStyle.css
+++ b/My Greek Resturnat/resturantStyle.css
@@ -10,6 +10,7 @@ span
 	}
 h1{
 	text-align: center;
+	font-weight: bold;
 }
 
 #Head   
@@ -29,10 +30,6 @@ h1{
 		a:visited{
 			color: Red;
 		}
-#Header
-{
-text-align: center;
-}
 #Footer
 	{
 		text-align: center;
