--- a/resturantStyle.css
+++ b/resturantStyle.css
@@ -83,7 +83,7 @@ hr {
   .container {
     max-width: 730px;
   }
-}
+
 .container-narrow > hr {
   margin: 30px 0;
 }
@@ -91,6 +91,7 @@ hr {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid RoyalBlue;
+}
 }
 
 @media screen and (min-width: 768px) {
@@ -134,6 +135,7 @@ hr {
 .carousel {
   height: 500px;
   margin-bottom: 60px;
+  background:RoyalBlue;
 }
 .carousel-caption {
   z-index: 10;
@@ -144,12 +146,12 @@ hr {
   margin-bottom: 60px;
 }
 
-.carousel-inner >  img {
+.carousel-inner > .item > img {
   position: absolute;
+  height: 500px;
   top: 0;
   left: 0;
-  min-width: 100%;
-  height: 500px;
+  background: RoyalBlue;
 }
 
 .featurette-divider {
